2006-10-13 [paul]	2.5.5cvs6

	* manual/advanced.xml
	* src/prefs_message.c
		make 'respect_flowed_format' a hidden
		option, and add a manual entry for it
		Thanks to Colin

2006-10-12 [colin]	2.5.5cvs5

	* src/codeconv.c
		Revert part of 2.5.2cvs21:
		Don't optimise by reusing the 
		last iconv converter if possible:
		it seems slightly broken in a 
		very hard way to reproduce

2006-10-12 [colin]	2.5.5cvs4

	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_message.c
	* src/procmime.c
		Fix bug 1035, 'Incorrect handling 
		of flowed lines'. We now optionnaly
		handle this format (preference is in
		Message View/Text options section)

2006-10-12 [colin]	2.5.5cvs3

	* po/POTFILES.in
		Add new file
	* src/plugins/pgpcore/pgp_viewer.c
	* src/plugins/pgpcore/sgpgme.c
		Don't try to import without asking

2006-10-12 [colin]	2.5.5cvs2

	* src/compose.c
		Fix bug 1036, 'Forwarding a mutlipart
		mail with a "text/html" block to ms
		outlook users leeds to freeze of
		outlook'. Poor outlook users...

2006-10-12 [paul]	2.5.5cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-10-11 [paul]	2.5.4cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-10-11 [paul]	2.5.3cvs32

	* src/textview.c
		fix bug 1032, 'Segmentation fault when showing
		message' (bug in quote folding)
		Thanks to Colin

2006-10-10 [colin]	2.5.3cvs31

	* src/quote_fmt.c
		Rephrase english a bit

2006-10-10 [colin]	2.5.3cvs30

	* src/prefs_compose_writing.c
		Stop making the page larger than the window

2006-10-10 [wwp]	2.5.3cvs29

	* src/compose.c
	* src/prefs_template.c
	* src/quote_fmt.c
	* src/quote_fmt.h
	* src/quote_fmt_lex.l
	* src/quote_fmt_parse.y
		Extend the quote parser a bit: allow to get access to
		basic (composing) account info.

2006-10-10 [colin]	2.5.3cvs28

	* src/procheader.c
		Fix this \t problem in subject

2006-10-09 [colin]	2.5.3cvs27

	* src/main.c
	* src/prefs_gtk.c