@@ -1,3 +1,9 @@
+2006-10-14 [colin]	2.5.5cvs7
+
+	* src/prefs_template.c
+		Reset fields when reopening
+		the window
+
 2006-10-13 [paul]	2.5.5cvs6
 
 	* manual/advanced.xml
